fixed z-index in head table

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -7093,6 +7093,7 @@ button.collapsed[data-toggle="collapse"] .arrow-drop{
 .sticky-top {
   position: -webkit-sticky;
   position: sticky;
+  z-index: 8;
   top: 0;}
 .t-96 {
   top: 96px;}
@@ -7102,7 +7103,6 @@ button.collapsed[data-toggle="collapse"] .arrow-drop{
   min-height: 100%;}
 /* .h-table-content {
   height: calc(100vh - 532px);} */
-
 .btn-notes:hover .notes-window {
   display: block;}
 .max-w-170 {
@@ -7184,7 +7184,6 @@ button.collapsed[data-toggle="collapse"] .arrow-drop{
   z-index: 3;}
 .m-h-355 {
   max-height: 355px!important;}
- 
 .table__item__check .icon-success, .base-li .icon-success{
   cursor: pointer;
   opacity: 0;}
